# tap3magic

./: .gitignore  CMakeLists.txt  hello.h  main.c  readme.md  todo
src/: CMakeLists.txt  main.c
src/circle/: CMakeLists.txt  Circle.c  Circle.h  EXTERNAL.c  EXTERNAL.h  Makefile  Makefile.am.asn1convert  Makefile.am.libasncodec  circle_test.c  circle_test.h  converter-example.mk  pdu_collection.c  sources.cmake
src/circle/pdu/: _sources.cmake  sources.cmake
src/hello/: CMakeLists.txt
src/hello/include/: hello.h
src/hello/src/: hello.c
src/pdus/tap/: tap3.asn1
src/pdus/tap/3_01/: AbsoluteAmount.c  AbsoluteAmount.h  AccessPointName.c  AccessPointName.h  AccountingInfo.c  AccountingInfo.h  AddressStringDigits.c  AddressStringDigits.h  AiurRequested.c  AiurRequested.h  AsciiString.c  AsciiString.h  AuditControlInfo.c  AuditControlInfo.h  BCDString.c  BCDString.h  BasicHSCSDParameters.c  BasicHSCSDParameters.h  BasicService.c  BasicService.h  BasicServiceCode.c  BasicServiceCode.h  BasicServiceCodeList.c  BasicServiceCodeList.h  BasicServiceUsed.c  BasicServiceUsed.h  BasicServiceUsedList.c  BasicServiceUsedList.h  BatchControlInfo.c  BatchControlInfo.h  BearerServiceCode.c  BearerServiceCode.h  Bid.c  Bid.h  CallEventDetail.c  CallEventDetail.h  CallEventDetailList.c  CallEventDetailList.h  CallEventDetailsCount.c  CallEventDetailsCount.h  (+464 more)
src/pdus/tap/3_02/: AbsoluteAmount.c  AbsoluteAmount.h  AccessPointName.c  AccessPointName.h  AccountingInfo.c  AccountingInfo.h  AddressStringDigits.c  AddressStringDigits.h  AiurRequested.c  AiurRequested.h  AsciiString.c  AsciiString.h  AuditControlInfo.c  AuditControlInfo.h  BCDString.c  BCDString.h  BasicHSCSDParameters.c  BasicHSCSDParameters.h  BasicService.c  BasicService.h  BasicServiceCode.c  BasicServiceCode.h  BasicServiceCodeList.c  BasicServiceCodeList.h  BasicServiceUsed.c  BasicServiceUsed.h  BasicServiceUsedList.c  BasicServiceUsedList.h  BatchControlInfo.c  BatchControlInfo.h  BearerServiceCode.c  BearerServiceCode.h  Bid.c  Bid.h  CallEventDetail.c  CallEventDetail.h  CallEventDetailList.c  CallEventDetailList.h  CallEventDetailsCount.c  CallEventDetailsCount.h  (+462 more)
src/pdus/tap/3_03/: AbsoluteAmount.c  AbsoluteAmount.h  AccessPointName.c  AccessPointName.h  AccountingInfo.c  AccountingInfo.h  AddressStringDigits.c  AddressStringDigits.h  AiurRequested.c  AiurRequested.h  AsciiString.c  AsciiString.h  AuditControlInfo.c  AuditControlInfo.h  BCDString.c  BCDString.h  BasicHSCSDParameters.c  BasicHSCSDParameters.h  BasicService.c  BasicService.h  BasicServiceCode.c  BasicServiceCode.h  BasicServiceCodeList.c  BasicServiceCodeList.h  BasicServiceUsed.c  BasicServiceUsed.h  BasicServiceUsedList.c  BasicServiceUsedList.h  BatchControlInfo.c  BatchControlInfo.h  BearerServiceCode.c  BearerServiceCode.h  Bid.c  Bid.h  CallEventDetail.c  CallEventDetail.h  CallEventDetailList.c  CallEventDetailList.h  CallEventDetailsCount.c  CallEventDetailsCount.h  (+462 more)
src/pdus/tap/3_04/: AbsoluteAmount.c  AbsoluteAmount.h  AccessPointName.c  AccessPointName.h  AccessPointNameNI.c  AccessPointNameNI.h  AccessPointNameOI.c  AccessPointNameOI.h  AccountNumber.c  AccountNumber.h  AccountingInfo.c  AccountingInfo.h  ActualDeliveryTimeStamp.c  ActualDeliveryTimeStamp.h  AddressStringDigits.c  AddressStringDigits.h  AdvisedCharge.c  AdvisedCharge.h  AdvisedChargeCurrency.c  AdvisedChargeCurrency.h  AdvisedChargeInformation.c  AdvisedChargeInformation.h  AiurRequested.c  AiurRequested.h  AsciiString.c  AsciiString.h  AuditControlInfo.c  AuditControlInfo.h  BCDString.c  BCDString.h  BasicHSCSDParameters.c  BasicHSCSDParameters.h  BasicService.c  BasicService.h  BasicServiceCode.c  BasicServiceCode.h  BasicServiceCodeList.c  BasicServiceCodeList.h  BasicServiceUsed.c  BasicServiceUsed.h  (+656 more)
src/pdus/tap/3_09/: AbsoluteAmount.c  AbsoluteAmount.h  AccessPointName.c  AccessPointName.h  AccessPointNameNI.c  AccessPointNameNI.h  AccessPointNameOI.c  AccessPointNameOI.h  AccountNumber.c  AccountNumber.h  AccountingInfo.c  AccountingInfo.h  ActualDeliveryTimeStamp.c  ActualDeliveryTimeStamp.h  AddressStringDigits.c  AddressStringDigits.h  AdvisedCharge.c  AdvisedCharge.h  AdvisedChargeCurrency.c  AdvisedChargeCurrency.h  AdvisedChargeInformation.c  AdvisedChargeInformation.h  AiurRequested.c  AiurRequested.h  AsciiString.c  AsciiString.h  AuditControlInfo.c  AuditControlInfo.h  BCDString.c  BCDString.h  BasicHSCSDParameters.c  BasicHSCSDParameters.h  BasicService.c  BasicService.h  BasicServiceCode.c  BasicServiceCode.h  BasicServiceCodeList.c  BasicServiceCodeList.h  BasicServiceUsed.c  BasicServiceUsed.h  (+656 more)
src/pdus/tap/3_11/: AbsoluteAmount.c  AbsoluteAmount.h  AccessPointNameNI.c  AccessPointNameNI.h  AccessPointNameOI.c  AccessPointNameOI.h  AccountingInfo.c  AccountingInfo.h  ActualDeliveryTimeStamp.c  ActualDeliveryTimeStamp.h  AddressStringDigits.c  AddressStringDigits.h  AdvisedCharge.c  AdvisedCharge.h  AdvisedChargeCurrency.c  AdvisedChargeCurrency.h  AdvisedChargeInformation.c  AdvisedChargeInformation.h  AgeOfLocation.c  AgeOfLocation.h  AsciiString.c  AsciiString.h  AuditControlInfo.c  AuditControlInfo.h  BCDString.c  BCDString.h  BasicService.c  BasicService.h  BasicServiceCode.c  BasicServiceCode.h  BasicServiceCodeList.c  BasicServiceCodeList.h  BasicServiceUsed.c  BasicServiceUsed.h  BasicServiceUsedList.c  BasicServiceUsedList.h  BatchControlInfo.c  BatchControlInfo.h  BearerServiceCode.c  BearerServiceCode.h  (+585 more)
src/pdus/tap/3_12/: AbsoluteAmount.c  AbsoluteAmount.h  AccessPointNameNI.c  AccessPointNameNI.h  AccessPointNameOI.c  AccessPointNameOI.h  AccountingInfo.c  AccountingInfo.h  ActualDeliveryTimeStamp.c  ActualDeliveryTimeStamp.h  AddressStringDigits.c  AddressStringDigits.h  AdvisedCharge.c  AdvisedCharge.h  AdvisedChargeCurrency.c  AdvisedChargeCurrency.h  AdvisedChargeInformation.c  AgeOfLocation.c  (+644 more)
src/readers/: CMakeLists.txt  placeholder.c  tap3reader.c  tap3reader.h  tapreader.c
src/readers/TAP0311/: _sources.cmake  placeholder.c  tap3reader.c  tap3reader.h  xer_encoder.c  xer_encoder.h
src/readers/tap0301/: tap0301reader.c
(+37 files in other folders)
